# heat_spreading

./: .gitignore  CMakeLists.txt  README.txt  config  install.sh  matrix
src/: Config.cpp  Config.h  TwoDimensionalDoubleArray.cpp  TwoDimensionalDoubleArray.h  TwoDimensionalFloatArray.cpp  TwoDimensionalFloatArray.h  main.cpp  utils.cpp  utils.h
